Oak dialog fix to remove DOM node when dialog is not visible

--- a/src/oakui/styles/OakDialog.scss
+++ b/src/oakui/styles/OakDialog.scss
@@ -5,15 +5,15 @@
   .dialog {
     // height: calc(100vh - var(--height-nav));
     height: 100vh;
-    width: calc(100vw - 362px - 50px);
+    // width: calc(100vw - 362px - 50px);
 
-    &.fullscreen {
-      width: calc(100vw - 25px);
-    }
+    // &.fullscreen {
+    //   width: calc(100vw - 25px);
+    // }
 
-    @media (max-width: 767px) {
-      width: calc(100vw - 5px);
-    }
+    // @media (max-width: 767px) {
+    //   width: calc(100vw - 5px);
+    // }
     right: 0;
     // top: var(--height-nav);
     top: 0;
@@ -23,9 +23,9 @@
     box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2),
       0px 4px 5px 0px rgba(0, 0, 0, 0.24), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
 
-    transition-property: width;
-    transition-duration: 0.3s;
-    transition-timing-function: cubic-bezier(0, 1, 0.5, 1);
+    // transition-property: width;
+    // transition-duration: 0.3s;
+    // transition-timing-function: cubic-bezier(0, 1, 0.5, 1);
     z-index: 10;
 
     .container {
@@ -95,9 +95,9 @@
       }
     }
 
-    &.hide {
-      width: 0vw;
-    }
+    // &.hide {
+    //   width: 0vw;
+    // }
 
     &.show {
       padding: 0px;
